Fix background not fixed on mobile

--- a/css/styles.css
+++ b/css/styles.css
@@ -186,6 +186,10 @@ h3 ~ p{
 .education {
     background: linear-gradient(rgba(141, 153, 174, 0.8), rgba(141, 153, 174, 0.5)), url(../images/cityhall.jpg) no-repeat fixed;
     background-size: cover;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+
 }
 
 p + h3 {
